@@ -53,6 +53,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 479041  Executables without RW sections do not trigger debuginfo reading
 480052  WARNING: unhandled amd64-freebsd syscall: 580
 480126  Build failure on Raspberry Pi 5 / OS 6.1.0-rpi7-rpi-v8
+480488  Add support for FreeBSD 13.3
 n-i-bz  Add redirect for memccpy
 
 To see details of a given bug, visit
